handling number format exception and not found exception